Fixed Horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  max-width: 100%;
+  max-width: 96%;
   background-color: black;
   font-family: "Roboto" sans-serif;
 }
