--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,8 +1,7 @@
 .footer {
   width: 100%;
   height: 100%;
-  border-top: 1px solid rgb(252, 252, 252);
-  background-color: rgba(43, 43, 43, 0.404);
+  background-color: transparent;
   margin-bottom: 0rem;
 }
 
@@ -34,7 +33,7 @@
   height: 50%;
   object-fit: cover;
   object-position: center;
-  z-index: -1;
+  z-index: 1100;
 }
 
 .f-link {
