--- a/src/component/Movie.css
+++ b/src/component/Movie.css
@@ -1,5 +1,5 @@
 .movie {
-  width: 100%;
+  width: 104%;
   position: relative;
   min-height: 640px;
   display: flex;
@@ -12,6 +12,7 @@
 }
 
 .m-img1 {
+  right: 0;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -26,6 +27,7 @@
   width: 45%;
   height: 55vh; */
 }
+
 .m-img2 {
   border-radius: 20px;
   padding: 0.5rem;
