--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -3,14 +3,14 @@ main {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  padding: 0 0 120px;
+  padding: 0 0 130px;
   background-color: black;
 }
 
 section {
   position: relative;
   overflow: hidden;
-  padding: 120px 100px 20px;
+  padding: 10px 80px 10px;
   width: 100%;
   transition: ease-in-out 1s;
   transform-origin: bottom;
