--- a/src/pages/Tv.css
+++ b/src/pages/Tv.css
@@ -8,7 +8,7 @@
   margin-bottom: 5rem;
   max-width: 88%;
   margin-right: auto;
-  margin-left: 4rem;
+  margin-left: 6rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, auto));
   gap: 1rem;
@@ -18,8 +18,8 @@
 .tv-shows .box .box-img {
   display: inline-block;
   margin-top: 2rem;
-  width: 100%;
-  height: 270px;
+  width: 95%;
+  height: 320px;
 }
 
 .tv-shows .box .box-img img {
